# boolish-website

./: CNAME  README.md  landingpage.html  main.py  pyproject.toml
app/: dependencies.py  server.py
app/core/: settings.py
app/functions/coord_to_geohash/: coord_to_geohash.py
app/modules/coord_to_geohash/api/: router.py  schemas.py
app/modules/coord_to_geohash/domain/: errors.py  models.py
app/modules/coord_to_geohash/services/: coordinate_parser.py  geohash_coverage.py  geometry_builder.py  renderers.py  use_case.py
app/modules/home/: page.py
app/modules/home/api/: router.py
app/shared/storage/: expiring_run_store.py
